# 2DChess

./: .gitignore  CMakeLists.txt  README.md  demo.webm
src/: BoardCell.h  ChessController.cpp  ChessController.h  Piece.h  main.cpp
